# mysql-awesome-stats-collector

./: .gitignore  CHANGELOG.txt  LICENSE  README.md  pyproject.toml  todo
.github/workflows/: auto-tag.yml  release.yml  test-build.yml
app/: __main__.py  collector.py  db.py  main.py  models.py  parser.py
app/templates/: base.html  compare.html  compare_result.html  host_detail.html  hosts.html  index.html  job_detail.html  jobs.html
docs/: PUBLISHING.md
mysql-observer/: .gitignore  CHANGELOG.txt  README.md  hosts.yaml.example  pyproject.toml
mysql-observer/app/: __init__.py  collector.py  compare.py  main.py  parser.py  utils.py
mysql-observer/app/templates/: base.html  compare.html  compare_result.html  host_detail.html  index.html  job_detail.html  jobs.html
